# nfs-mamont

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gitflic-ci.yaml  graph.json  prometheus.yml  server_context.txt
.github/: copilot-instructions.md
.github/workflows/: fuzz.yml  rust-ci.yml  rust.yml
bench/: analyze.py  run_bench.py
doc/: ARCHITECTURE.MD
examples/demo_fs/: fs.rs  fs_contents.rs  fs_entry.rs  main.rs
examples/direct_fs/: README.md  fs.rs  main.rs
examples/in_memory/: filesystem.rs  main.rs
examples/mirror_fs/: args.rs  args_parser.rs  config.rs  config.toml  create_fs_object.rs  error_handling.rs  fs.rs  fs_entry.rs  fs_map.rs  main.rs  result.rs
examples/shadow_fs/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parser_fuzz.rs  parser_wrapper.rs  read_socket.rs  round.rs  serializer.rs
grafana/dashboards/: nfs-mamont-overview.json  nfs-mamont-procedures.json
mamont/: Cargo.toml
mamont/src/: lib.rs  read_task.rs  rpc_command.rs  tcp.rs
mamont/tests/: xdr.rs
mirror_fs/: Cargo.toml  config.toml
mirror_fs/src/: args.rs  async_fs.rs  config.rs  fs_map.rs  lib.rs  main.deps.json  main.facts.json  main.rs  uring.rs
mirror_fs/src/cache/: mod.rs  readdir.rs
mirror_fs/src/fs/: access_impl.rs  commit_impl.rs  create_impl.rs  fs_info_impl.rs  fs_stat_impl.rs  get_attr_impl.rs  link_impl.rs  lookup_impl.rs  mk_dir_impl.rs  mk_node_impl.rs  mod.rs  path_conf_impl.rs  read_dir_impl.rs  read_dir_plus_impl.rs  read_impl.rs  read_link_impl.rs  remove_impl.rs  rename_impl.rs  rm_dir_impl.rs  set_attr_impl.rs  symlink_impl.rs  write_impl.rs
mirror_fs/src/tests/: create_ops.rs  directory_ops.rs  helpers.rs  info_ops.rs
mirror_fs/src/uring/: buffer.rs  executor.rs  helpers.rs  mod.rs  pool.rs  types.rs  worker.rs
mock-vfs/: Cargo.toml
mock-vfs/benches/: pipeline.rs
mock-vfs/docs/: pipeline.md  server.md  throughput.md
mock-vfs/src/: config.rs  lib.rs  xdr.rs
mock-vfs/src/mock/: access_impl.rs  commit_impl.rs  create_impl.rs  fs_info_impl.rs  fs_stat_impl.rs  get_attr_impl.rs  link_impl.rs  lookup_impl.rs  mk_dir_impl.rs  mk_node_impl.rs  mod.rs  path_conf_impl.rs  read_dir_impl.rs  read_dir_plus_impl.rs  read_impl.rs  read_link_impl.rs  remove_impl.rs  rename_impl.rs  rm_dir_impl.rs  set_attr_impl.rs  symlink_impl.rs  write_impl.rs
nfs-mamont/: Cargo.toml
nfs-mamont-derive/: Cargo.toml
nfs-mamont-derive/src/: lib.rs
nfs-mamont/src/: context.rs  lib.deps.json  lib.facts.json  lib.rs  rpc.rs
nfs-mamont/src/allocator/: buffer.rs  mod.rs  slice.rs
nfs-mamont/src/allocator/mock/: alloc.rs  buffer.rs
nfs-mamont/src/allocator/tests/: mod.rs
nfs-mamont/src/allocator/tests/allocator/: allocate.rs  mod.rs
nfs-mamont/src/allocator/tests/slice/: iter.rs  iter_mut.rs  mod.rs  test_helpers.rs
nfs-mamont/src/consts/: mount.rs  nlm.rs
nfs-mamont/src/mocks/: alloc.rs  buffer.rs  mod.rs  write_socket.rs
nfs-mamont/src/mount/: dump.rs  export.rs  mnt.rs  mod.rs  umnt.rs
nfs-mamont/src/nlm/: cookie.rs  holder.rs  lock.rs  mod.rs  share.rs
nfs-mamont/src/nlm/procedures/: cancel.rs  lock.rs  test.rs  unlock.rs
nfs-mamont/src/parser/: mod.rs  parser_struct.rs  primitive.rs  read_buffer.rs  rpc.rs
nfs-mamont/src/parser/nfsv3/: lookup.rs  mk_dir.rs  mk_node.rs  remove.rs  rename.rs  rm_dir.rs  set_attr.rs  symlink.rs  write.rs
nfs-mamont/src/parser/nlm/: cancel.rs  lock.rs  mod.rs  test.rs  unlock.rs
nfs-mamont/src/parser/tests/: allocator.rs  mod.rs  parser_struct.rs  socket.rs
nfs-mamont/src/serializer/: mod.rs
nfs-mamont/src/serializer/client/: mod.rs
nfs-mamont/src/serializer/client/arguments/: mod.rs
nfs-mamont/src/serializer/client/arguments/mount/: mod.rs
nfs-mamont/src/serializer/client/arguments/nfsv3/: access.rs  fs_stat.rs  mk_node.rs  mod.rs  rename.rs  rm_dir.rs  set_attr.rs  write.rs
nfs-mamont/src/serializer/client/arguments/nlm4/: cancel.rs  lock.rs  test.rs  unlock.rs
nfs-mamont/src/serializer/server/: mod.rs  serialize_struct.rs
nfs-mamont/src/serializer/server/mount/: dump.rs  export.rs  mod.rs
nfs-mamont/src/serializer/server/nfs/: fs_stat.rs  get_attr.rs  path_conf.rs  read_dir.rs  read_dir_plus.rs  remove.rs  write.rs
nfs-mamont/src/serializer/server/nlm/: mod.rs
nfs-mamont/src/serializer/server/tests/: primitive.rs
nfs-mamont/src/service/: mod.rs
nfs-mamont/src/service/mount/: dump.rs  export.rs  mnt.rs  mod.rs  umnt.rs  umntall.rs
nfs-mamont/src/service/nlm/: cancel.rs  lock.rs  mod.rs  test.rs  unlock.rs
nfs-mamont/src/service/nlm/tests/: mod.rs  ranges.rs  registry.rs
nfs-mamont/src/service/nlm/tests/operations/: cancel.rs  lock.rs  mod.rs  test.rs  unlock.rs
nfs-mamont/src/task/: mod.rs
nfs-mamont/src/task/connection/: mod.rs  read.rs  write.rs
nfs-mamont/src/task/global/: mod.rs  mount.rs  nlm.rs  vfs.rs
nfs-mamont/src/vfs/: access.rs  commit.rs  create.rs  file.rs  fs_info.rs  fs_stat.rs  get_attr.rs  link.rs  lookup.rs  mk_dir.rs  mk_node.rs  mod.rs  path_conf.rs  read.rs  read_dir.rs  read_dir_plus.rs  read_link.rs  remove.rs  rename.rs  rm_dir.rs  set_attr.rs  symlink.rs  write.rs
nfs-mamont/src/xdr/: mod.rs  tests.rs
rfc/: README.md
scripts/: nfs_manual_full_check.sh  repeated_actions.sh
src/: allocator.rs  context.rs  fs_util.rs  handles.rs  lib.rs  message_types.rs  mount.rs  nfsv3.rs  nlm.rs  read_task.rs  response_buffer.rs  rpc.rs  rpc_command.rs  rpc_io.rs  runtime.rs  stream_writer.rs  tcp.rs  vfs.rs  vfs_task.rs  write_task.rs
src/allocator/: buffer.rs  chain.rs  list.rs  mod.rs  slice.rs
src/client/: mod.rs  results.rs
src/consts/: mod.rs  nlm.rs
src/dispatcher/: mod.rs
src/export/: mod.rs
src/fs/: mod.rs
src/handles/: handle_map.rs  inner.rs  mod.rs
src/interface/: mod.rs
src/mocks/: fuzz_socket.rs  mod.rs  parser_wrapper.rs  read_socket.rs
src/mount/: dump.rs  export.rs  mnt.rs  mod.rs  null.rs  service.rs  umnt.rs  umntall.rs
src/nlm/: cookie.rs  holder.rs  lock.rs  mod.rs  nsm.rs  (+1 more)
tests/: io.rs  parser.rs  portmap.rs  server_pipeline.rs  shadow_fs.rs
(+398 files in other folders)
