[package]
name = "nfs-mamont"
version = "0.0.0"
edition = "2021"
authors = ["Rmamonts"]
description = "A Rust NFS Server implementation"
publish = false
rust-version = "1.75.0"

[package.metadata.cargo-udeps.ignore]
development = ["tempfile"]

[lib]
doctest = false

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.49", features = ["full", "time"] }
byteorder = "1.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-channel = "2.5.0"
crossbeam-queue = "0.3.12"
whirlwind = "0.1.1"
moka = { version = "0.12.11", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
libc = "0.2"

[dev-dependencies]
tempfile = "3.26.0"

[[example]]
name = "mirrorfs"
path = "examples/mirror_fs/main.rs"
