[workspace]
members = ["nfs-mamont", "mirror_fs"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Rmamonts"]
rust-version = "1.75.0"

[workspace.dependencies]
# External dependencies
monoio = { version = "0.2.4", features = ["bytes", "macros", "sync"] }
byteorder = "1.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-channel = "2.5.0"
crossbeam-queue = "0.3.12"
trait-variant = "0.1.2"
async-lock = "3.4.0"

# Internal dependencies
nfs-mamont.path = "nfs-mamont"
