[workspace]
members = ["nfs-mamont", "mirror_fs"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Rmamonts"]
rust-version = "1.75.0"

[workspace.dependencies]
# External dependencies
tokio = { version = "1.52", features = ["full", "time"] }
byteorder = "1.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-channel = "2.5.0"
crossbeam-queue = "0.3.12"
trait-variant = "0.1.2"
libc = "0.2"

# Internal dependencies
nfs-mamont.path = "nfs-mamont"
