[package]
name = "mirrorfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Rust NFS Server implementation"
publish = false
rust-version.workspace = true

[dependencies]
# External dependencies
monoio.workspace = true
byteorder.workspace = true
num-derive.workspace = true
num-traits.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel.workspace = true
crossbeam-queue.workspace = true
trait-variant.workspace = true
async-lock.workspace = true

clap = { version = "4.5.61", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.6"
io-uring = "0.7.4"
libc = "0.2.159"

# Internal dependencies
nfs-mamont.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
