[package]
name = "nfs-mamont"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Rust NFS Server library"
publish = false
rust-version.workspace = true

[lib]
doctest = true

[dependencies]
# External dependencies
tokio.workspace = true
byteorder.workspace = true
num-derive.workspace = true
num-traits.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel.workspace = true
crossbeam-queue.workspace = true
trait-variant.workspace = true
libc.workspace = true
